--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server/listener.js",
     "watch": "parcel watch src/index.html --target node --bundle-node-modules",
     "dev": "cross-env NODE_ENV=development parcel build src/index.html --no-cache",
-    "build": "cross-env NODE_ENV=production parcel build src/index.html --no-cache",
-    "deploy": "gh-pages -d dist"
+    "build": "cross-env NODE_ENV=production parcel build src/index.html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d dist"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/MilesMickelson/MilesMickelson.github.io/issues"
   },
-  "homepage": "milesmickelson.com",
+  "homepage": "https://milesmickelson.com",
   "postcss": {
     "modules": false,
     "plugins": {
@@ -35,6 +36,7 @@
     }
   },
   "devDependencies": {
+    "@testing-library/react": "^9.5.0",
     "@types/react": "^16.9.23",
     "autoprefixer": "^9.7.4",
     "cross-env": "^7.0.0",
@@ -44,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "express": "^4.17.1",
     "gh-pages": "^2.2.0",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
@@ -57,12 +60,8 @@
     "@babel/preset-react": "^7.8.3",
     "@hot-loader/react-dom": "^16.12.0",
     "babel-loader": "^8.0.6",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "morgan": "^1.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.19",
