--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
     "react/prefer-stateless-function": [0],
     "react/prop-types": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "comma-dangle": [0],
+    "semi": [2],
+    "comma-dangle": [1],
     "no-unused-expressions": [1],
     "react/destructuring-assignment": [1],
     "jsx-a11y/no-noninteractive-tabindex": [1],
